app-web.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qod-web
  labels:
    app: qod-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qod-web
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: qod-web
        deployment: qod-web
    spec:
      containers:
        - name: qod-web
          image: 'docker.io/kalyan1981/qod-web:latest'
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
