app-api-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: qod-api
  labels:
    app: qod-api
    app.kubernetes.io/component: qod-api
    app.kubernetes.io/instance: qod-api
    app.kubernetes.io/name: qod-api
    app.kubernetes.io/part-of: QOD
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: qod-api
    deployment: qod-api
