app-web-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: qod-web
  labels:
    app: qod-web
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: qod-web
    deployment: qod-web
