app-web-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: qod-web
  labels:
    app: qod-web
spec:
  to:
    kind: Service
    name: qod-web
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
